--- a/style.css
+++ b/style.css
@@ -27,3 +27,66 @@ Images:
 - "https://i.pinimg.com/236x/d6/3f/56/d63f563519df0ece564b82c72e9e306c.jpg"
     - (You may use any image you would like for the background!)
 */
+body{
+    background-image: url(https://i.pinimg.com/236x/d6/3f/56/d63f563519df0ece564b82c72e9e306c.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.header{
+    width: 100%;
+    height: 50px;
+    text-align: center;
+    background-color: rgb(195, 84, 84);
+    border-radius: 50px;
+    color: blue;
+    text-decoration: underline;
+    text-decoration-color: blue;
+    font-size: 40px;
+}
+
+img{
+    border: 5px solid blue;
+}
+
+p{
+    border: 2px solid red;
+}
+
+#j1-desc{
+    width: 1300px;
+    height: 100px;
+    text-align: center;
+    background-color: lightblue;
+    font-size: 18px;
+    font-weight: bold;
+    color: white;
+    border-radius: 30px;
+}
+
+#desc{
+    width: 1100px;
+    height: 100px;
+    font-size: 18px;
+    font-weight: bold;
+    color: white;
+    background-color: rgb(195, 84, 84);
+    border-radius: 30px;
+}
+
+.j2-desc{
+    width: 1300px;
+    height: 100px;
+    text-align: center;
+
+    font-size: 18px;
+    font-weight: bold;
+    color: white;
+    background-color: rgb(195, 84, 84);
+    border-radius: 30px; 
+}
+
+.secondImage{
+    width: 700px;
+    height: 600px;
+}
